--- a/index.html
+++ b/index.html
@@ -447,89 +447,64 @@
         </div>
         <!-- Pricing End -->
 
-                      <!-- Testiminial Start -->
-                     <div class="container-fluid testimonial py-5">
-                     <div class="container py-5">
-                     <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                     <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Features</h1>
-                     </div>   
-                     <h2 class="display-5 w-50 mx-auto">Why Choose Us</h2>
-                     </div>    
-                     <p>Our specialist Entomologists deliver inspections and audits on a regular basis to provide you with an appropriate standard quality management system. Our documented processes aim to reduce risk in your business.</p>
-                     </div>
+                    <!-- Testimonial Start -->
+<div class="container-fluid testimonial py-5">
+    <div class="container py-5">
+        <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
+            <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Features</h1>
+        </div>
+        <h2 class="display-5 w-50 mx-auto">Why Choose Us</h2>
+        <p>Our specialist Entomologists deliver inspections and audits on a regular basis to provide you with an appropriate standard quality management system. Our documented processes aim to reduce risk in your business.</p>
     </div>
 </div>
 
-                <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay=".5s">
-                    <div class="testimonial-item">
-                        <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Welcome to BRISK PEST SERVICE, where your peace of mind is our top priority. Our dedicated team of experts is committed to providing superior pest control solutions tailored to your needs. With our comprehensive services, cutting-edge techniques, and eco-friendly practices, we guarantee 100% satisfaction in safeguarding your home or business from pests. Trust us for a pest-free environment, backed by our unwavering commitment to your complete satisfaction</p>
-                        </div>
-                        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
-                            <div class="position-relative">
-                                <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle py-2" alt="">
-                                <div class="position-absolute" style="top: 33px; left: -25px;">
-                                </div>
-                            </div>
-                            <div class="ms-3">
-                                <h4 class="mb-0">100% Satisifaction Guarantee</h4>
-                                <div class="d-flex">
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-item">
-                        <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Brisk Pest Management: Your premier solution for top-tier, eco-friendly pest control. Our experts ensure an impeccably pest-free environment, offering 24/7 Emergency Services for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
-                        </div>
-                        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
-                            <div class="position-relative">
-                                <img src="img/testimonial-2.jpg" class="img-fluid rounded-circle py-2" alt="">
-                                <div class="position-absolute" style="top: 33px; left: -25px;">
-                                </div>
-                            </div>
-                            <div class="ms-3">
-                                <h4 class="mb-0">24/7 Emergency Service</h4>
-                                <div class="d-flex">
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-item">
-                        <div class="testimonial-content rounded mb-4 p-4">
-                            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier solution for eco-friendly pest control. Our experts ensure an impeccably pest-free environment, featuring Straight Forward Pricing for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
-                        </div>
-                        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
-                            <div class="position-relative">
-                                <img src="img/testimonial-3.jpg" class="img-fluid rounded-circle py-2" alt="">
-                                <div class="position-absolute" style="top: 33px; left: -25px;">
-                                </div>
-                            </div>
-                            <div class="ms-3">
-                                <h4 class="mb-0">Straight Forward Pricing</h4>
-                                <div class="d-flex">
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                    <small class="fas fa-star text-primary me-1"></small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
-        <!-- Testiminial End -->
+<div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay=".5s">
+    <div class="testimonial-item">
+        <div class="testimonial-content rounded mb-4 p-4">
+            <p class="fs-5 m-0">Welcome to BRISK PEST SERVICE, where your peace of mind is our top priority. Our dedicated team of experts is committed to providing superior pest control solutions tailored to your needs. With our comprehensive services, cutting-edge techniques, and eco-friendly practices, we guarantee 100% satisfaction in safeguarding your home or business from pests. Trust us for a pest-free environment, backed by our unwavering commitment to your complete satisfaction</p>
+        </div>
+        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
+            <div class="position-relative">
+                <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle py-2" alt="">
+                <div class="position-absolute" style="top: 33px; left: -25px;"></div>
+            </div>
+            <div class="ms-3">
+                <h4 class="mb-0">100% Satisfaction Guarantee</h4>
+            </div>
+        </div>
+    </div>
 
+    <div class="testimonial-item">
+        <div class="testimonial-content rounded mb-4 p-4">
+            <p class="fs-5 m-0">Brisk Pest Management: Your premier solution for top-tier, eco-friendly pest control. Our experts ensure an impeccably pest-free environment, offering 24/7 Emergency Services for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
+        </div>
+        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
+            <div class="position-relative">
+                <img src="img/testimonial-2.jpg" class="img-fluid rounded-circle py-2" alt="">
+                <div class="position-absolute" style="top: 33px; left: -25px;"></div>
+            </div>
+            <div class="ms-3">
+                <h4 class="mb-0">24/7 Emergency Service</h4>
+            </div>
+        </div>
+    </div>
+
+    <div class="testimonial-item">
+        <div class="testimonial-content rounded mb-4 p-4">
+            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier solution for eco-friendly pest control. Our experts ensure an impeccably pest-free environment, featuring Straight Forward Pricing for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
+        </div>
+        <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
+            <div class="position-relative">
+                <img src="img/testimonial-3.jpg" class="img-fluid rounded-circle py-2" alt="">
+                <div class="position-absolute" style="top: 33px; left: -25px;"></div>
+            </div>
+            <div class="ms-3">
+                <h4 class="mb-0">Straight Forward Pricing</h4>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Testimonial End -->
 
         <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
