--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>PestKit - Pest Control Website Template</title>
+        <title>Brisk Pest Manegement </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -41,9 +41,9 @@
             <div class="container">
                 <div class="d-flex justify-content-between topbar py-2">
                     <div class="d-flex align-items-center flex-shrink-0 topbar-info">
-                        <a href="#" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>123 Street, CA, USA</a>
-                        <a href="#" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>+01234567890</a>
-                        <a href="#" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>Example@gmail.com</a>
+                        <a href="#" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>India</a>
+                        <a href="#" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>+919900102056</a>
+                        <a href="#" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>sunaif@gmail.com</a>
                     </div>
                     <div class="text-end pe-4 me-4 border-end border-dark search-btn">
                         <div class="search-form">
@@ -74,28 +74,22 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-primary mb-0 display-5">Pest<span class="text-white">Kit</span><i class="fa fa-spider text-primary ms-2"></i></h1>
+                        <h1 class="text-primary mb-0 display-5">brisk<span class="text-white">group of companies</span><i class=""></i></h1>
                     </a>
                     <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-dark"></span>
                     </button>
                     <div class="collapse navbar-collapse me-n3" id="navbarCollapse">
                         <div class="navbar-nav ms-auto">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
-                            <a href="project.html" class="nav-item nav-link">Projects</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu m-0 bg-primary">
-                                    <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                                    <a href="blog.html" class="dropdown-item">Blog Post</a>
-                                    <a href="team.html" class="dropdown-item">Team Members</a>
-                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                    <a href="404.html" class="dropdown-item">404 Page</a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
                 </nav>
@@ -130,11 +124,11 @@
                 <div class="row g-5 mb-5">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay=".3s">
                         <div class="h-100">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001583.639214438!2d-78.4099249913019!3d42.71993723844549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1687175686342!5m2!1sen!2sbd" class="border-0 rounded w-100 h-100" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.713236866584!2d77.61953417585683!3d12.926143415871646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae154132bba2d5%3A0xfe1d6b4308e11f78!2sSunaif%20Adkar!5e0!3m2!1sen!2sin!4v1702964559012!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay=".5s">
-						<p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+						<p class="mb-4">sorry this contact option is mot available right now staytuned we have been updating. <a href="https://instagram.com/sunaif_adkar">thank you</a>.</p>
                         <div class="rounded contact-form">
                             <div class="mb-4">
                                 <input type="text" class="form-control p-3" placeholder="Your Name">
@@ -163,9 +157,8 @@
                                 <div class="d-flex justify-content-center">
                                     <a class="pe-2" href="#"><i class="fab fa-facebook-f text-dark"></i></a>
                                     <a class="px-2" href="#"><i class="fab fa-twitter text-dark"></i></a>
-                                    <a class="px-2" href="#"><i class="fab fa-instagram text-dark"></i></a>
-                                    <a class="px-2" href="#"><i class="fab fa-linkedin-in text-dark"></i></a>
-                                    <a class="px-2" href="#"><i class="fab fa-youtube text-dark"></i></a>
+                                    <a class="px-2" href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"><i class="fab fa-instagram text-dark"></i></a>
+                                    <a class="px-2" href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fab fa-linkedin-in text-dark"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +171,7 @@
                             <div class="ms-3 contact-link">
                                 <h4 class="text-dark">Address</h4>
                                 <a href="#">
-                                    <h5 class="text-dark d-inline fs-6">123 Street, CA, USA</h5>
+                                    <h5 class="text-dark d-inline fs-6">#23/2, Govindappa Layout, GKM College Road,Jaraganahalli, JP Nagar 6th Phase,</h5>
                                 </a>
                             </div>
                         </div>
@@ -190,7 +183,7 @@
                             </div>
                             <div class="ms-3 contact-link">
                                 <h4 class="text-dark">Call Us</h4>
-                                <a class="h5 text-dark fs-6" href="tel:+0123456789">+012 3456 7890</a>
+                                <a class="h5 text-dark fs-6" href="tel:+919900102056">+919900102056</a>
                             </div>
                         </div>
                     </div>
@@ -201,7 +194,7 @@
                             </div>
                             <div class="ms-3 contact-link">
                                 <h4 class="text-dark">Email Us</h4>
-                                <a class="h5 text-dark fs-6" href="#">info@example.com</a>
+                                <a class="h5 text-dark fs-6" href="#">info@briskpestmanagement.com</a>
                             </div>
                         </div>
                     </div>
@@ -211,15 +204,16 @@
         <!-- Contact End -->
 
 
-        <!-- Footer Start -->
+       <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
             <div class="container py-5">
                 <div class="row g-4 footer-inner">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
-                            <h4 class="text-white fw-bold mb-4">About PestKit.</h4>
-                            <p>Nostrud exertation ullamco labor nisi aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
-                            <p class="mb-0"><a class="" href="#">PestKit </a> &copy; 2023 All Right Reserved.</p>
+                            <h4 class="text-white fw-bold mb-4">About brisk</h4>
+                            <p>Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way.
+Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
+                            <p class="mb-0"><a class="" href="#">brisk </a> &copy; 2023 All Right Reserved.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -237,10 +231,16 @@
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Services Link</h4>
                             <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Apartment Cleaning</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Office Cleaning</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Car Washing</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Green Cleaning</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Rodent Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Mosquito Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Bed Bug Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>WASP control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Ants Treatment</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Cockroach Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Fly Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Honey Bee Removal</a>
+
+
                             </div>
                             
                         </div>
@@ -248,9 +248,9 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Contact Us</h4>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 pb-3 border-bottom rounded-0"><i class="fa fa-map-marker-alt me-3"></i>123 Street, CA, USA</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-envelope me-3"></i>info@example.com</a>
+                            <a href="" class="btn btn-link w-100 text-start ps-0 pb-3 border-bottom rounded-0"><i class="fa fa-map-marker-alt me-3"></i>banglore, india</a>
+                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-phone-alt me-3"></i>++919900102056</a>
+                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-envelope me-3"></i>sunaif@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                        <a href="#" class="text-primary mb-0 display-6">Pest<span class="text-white">Kit</span><i class="fa fa-spider text-primary ms-2"></i></a>
+                        <a href="#" class="text-primary mb-0 display-6">Brisk<span class="text-white">group of companies</span><i class=""></i></a>
                     </div>
                     <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
                         <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-twitter"></i></a>
@@ -277,7 +277,7 @@
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a>
                     </div>
                 </div>
             </div>
