infinix hot 14pro max ultra flip78

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-primary mb-0 display-5">brisk<span class="text-white">group of companies</span><i class=""></i></h1>
+                        <h1 class="text-primary mb-0 display-5">Brisk<span class="text-white">group of companies</span><i class=""></i></h1>
                     </a>
                     <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-dark"></span>
@@ -118,31 +118,14 @@
         <div class="container-fluid py-5">
             <div class="container py-5">
                 <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Get In Touch</h5>
-                    <h1 class="display-5 w-50 mx-auto">Contact for any query</h1>
+                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Catch US Map</h5>
                 </div>
                 <div class="row g-5 mb-5">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay=".3s">
                         <div class="h-100">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.713236866584!2d77.61953417585683!3d12.926143415871646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae154132bba2d5%3A0xfe1d6b4308e11f78!2sSunaif%20Adkar!5e0!3m2!1sen!2sin!4v1702964559012!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.1686306034962!2d77.57283347585637!3d12.896876016510564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae15be7dcdf959%3A0x17a0f0cbd87b394b!2sGovindappa%20Layout%2C%20Jaraganahalli!5e0!3m2!1sen!2sin!4v1702966430267!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay=".5s">
-						<p class="mb-4">sorry this contact option is mot available right now staytuned we have been updating. <a href="https://instagram.com/sunaif_adkar">thank you</a>.</p>
-                        <div class="rounded contact-form">
-                            <div class="mb-4">
-                                <input type="text" class="form-control p-3" placeholder="Your Name">
-                            </div>
-                            <div class="mb-4">
-                                <input type="email" class="form-control p-3" placeholder="Your Email">
-                            </div>
-                            <div class="mb-4">
-                                <input type="text" class="form-control p-3" placeholder="Subject">
-                            </div>
-                            <div class="mb-4">
-                                <textarea class="w-100 form-control p-3" rows="6" cols="10" placeholder="Message"></textarea>
-                            </div>
-                            <button class="btn btn-primary border-0 py-3 px-4 rounded-pill" type="button">Send Message</button>
                         </div>
                     </div>
                 </div>
@@ -155,8 +138,7 @@
                             <div class="ms-3 contact-link">
                                 <h4 class="text-dark">fallow Us</h4>
                                 <div class="d-flex justify-content-center">
-                                    <a class="pe-2" href="#"><i class="fab fa-facebook-f text-dark"></i></a>
-                                    <a class="px-2" href="#"><i class="fab fa-twitter text-dark"></i></a>
+                                    <a class="pe-2" href="https://www.facebook.com/cssllp?mibextid=LQQJ4d"><i class="fab fa-facebook-f text-dark"></i></a>
                                     <a class="px-2" href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"><i class="fab fa-instagram text-dark"></i></a>
                                     <a class="px-2" href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fab fa-linkedin-in text-dark"></i></a>
                                 </div>
@@ -171,7 +153,7 @@
                             <div class="ms-3 contact-link">
                                 <h4 class="text-dark">Address</h4>
                                 <a href="#">
-                                    <h5 class="text-dark d-inline fs-6">#23/2, Govindappa Layout, GKM College Road,Jaraganahalli, JP Nagar 6th Phase,</h5>
+                                    <h5 class="text-dark d-inline fs-6">#23/2, Govindappa Layout, GKM College Road,,</h5>
                                 </a>
                             </div>
                         </div>
@@ -194,7 +176,7 @@
                             </div>
                             <div class="ms-3 contact-link">
                                 <h4 class="text-dark">Email Us</h4>
-                                <a class="h5 text-dark fs-6" href="#">info@briskpestmanagement.com</a>
+                                <a class="h5 text-dark fs-6" href="info.briskpestmanagement@gmail.com">mail us</a>
                             </div>
                         </div>
                     </div>
