--- a/price.html
+++ b/price.html
@@ -69,7 +69,7 @@
         <!-- Topbar End -->
 
 
-        <!-- Navbar Start -->
+        <!-- Navbar Start -
         <div class="container-fluid bg-dark">
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
