--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                 </nav>
             </div>
         </div>
-        <!-- Page Header End -->
+        <!-- Page Header End>
 
 
         <!-- Contact Start -->
