--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-primary mb-0 display-5">brisk<span class="text-white">group of companies</span><i class=""></i></h1>
+                        <h1 class="text-primary mb-0 display-5">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
                     </a>
                     <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-dark"></span>
@@ -150,7 +150,7 @@
 <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
 <div class="about-item overflow-hidden">
 <h2 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h2>
-<h1 class="display-5 mb-2">World Best Pest Control Services Since 2021</h1>
+<h1 class="display-5 mb-2">World Best Pest Control Services Since 2017</h1>
 <p class="fs-5" style="text-align: justify;">Brisk Pest Management Service - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way. Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
 <div class="row">
 <div class="col-3">
