--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
 
         <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
+        
+        <!-- Your Logo Stylesheet -->
+    <style>
+        .logo-container {
+            background-image: url('img/brisklogo.png'); /* Update the path to your actual logo */
+            background-size: cover;
+            width: 200px; /* Set a width for your logo container */
+            height: 100px; /* Set a height for your logo container */
+        }
+    </style>
+</head>
+
+<body>
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
