--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
 </head>
 <body>
 
-<img src="/img/brisklogo.png" alt="Your Logo" style="max-width: 100%; height: auto; width: 300px;">
+<div align="center">
+  <img src="img/brisklogo.png" alt="Brisk Pest Control" length="30", width="10%">
+</div>
 </div>
 </div>
 </div>
