--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 
     <head>
-        <meta charset="utf-8">
-        <title>Brisk Pest Manegement </title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
+    <meta charset="utf-8">
+    <title>Brisk Pest Management</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+    <link rel="icon" href="img/brisklogo.png" type="image/png">
+</head>
+
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
